--- a/pages/index.html
+++ b/pages/index.html
@@ -29,7 +29,8 @@
                 <li class="header-li" id="header-li"><a href="#service" style="margin-left: 40px;">Service</a></li>
                 <li class="header-li" id="header-li"><a href="#about">About</a></li>
                 <li class="header-li" id="header-li"><a href="#contact">Contact</a></li>
-                <li class="header-socials"><a href="https://www.instagram.com/kbcreative.nl/" rel="noopener" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                <li class="header-socials"><a href="https://www.instagram.com/kbcreative.nl/" rel="noopener"
+                        target="_blank"><i class="fab fa-instagram"></i></a></li>
                 <li class="header-socials"><a href="https://www.linkedin.com/company/kbcreative-nl" rel="noopener"
                         target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                 <li class="header-socials"><a href="mailto:kbcreativeAThotmailDOTcom" onclick="this.href=this.href
@@ -79,7 +80,7 @@
                 <div class="column">
                     <div class="card">
                         <img src="../img/icons/dev-icon.png" loading="lazy" width="70" alt="Design Icon">
-                        <h2 class="subheading">Create</h2>
+                        <h2 class="subheading">Build</h2>
                         <p>We create <b>full-stack</b> web solutions. In need of a website where the user needs to sign
                             up
                             safely? No problem, we can help you with that!</p>
@@ -183,7 +184,8 @@
     <footer>
         <div class="container">
             <ul class=" socials">
-                <li><a href="https://www.instagram.com/kbcreative.nl/" rel="noopener" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://www.instagram.com/kbcreative.nl/" rel="noopener" target="_blank"><i
+                            class="fab fa-instagram"></i></a></li>
                 <li><a href="https://www.linkedin.com/company/kbcreative-nl" rel="noopener" target="_blank"><i
                             class="fab fa-linkedin-in"></i></a></li>
                 <li><a href="mailto:kbcreativeAThotmailDOTcom" onclick="this.href=this.href
