--- a/pages/index.html
+++ b/pages/index.html
@@ -66,7 +66,7 @@
                     <a href="#contact" class="primary-btn">Get in touch</a>
                 </div>
                 <div class="column">
-                    <img src="../img/illustrations/illu-dev-design.png" alt="Development image" height="350"
+                    <img src="../img/illustrations/illu-home.svg" alt="Development image" height="350"
                         style="float: right;">
                 </div>
             </div>
@@ -174,8 +174,8 @@
                     </form>
                 </div>
                 <div class="column">
-                    <img src="../img/illustrations/illu-contact.png" loading="lazy" alt="Development image"
-                        class="illustration-img" height="400" style="float: right;">
+                    <img src="../img/illustrations/illu-contact.svg" loading="lazy" alt="Development image"
+                        class="illustration-img">
                 </div>
             </div>
         </div>
