--- a/pages/index.html
+++ b/pages/index.html
@@ -23,7 +23,7 @@
     <div class="header">
         <div class="header-content">
             <ul class="header-nav" data-aos="fade-down" data-aos-duration="600">
-                <li><a href="#home"><img src="../img/logo/KB Creative.png" alt="Logo KB Creative"
+                <li><a href="#home" class="logo-link"><img src="../img/logo/KB Creative.png" alt="Logo KB Creative"
                             class="logo-header"></a>
                 </li>
                 <li class="header-li" id="header-li"><a href="#service" style="margin-left: 40px;">Service</a></li>
@@ -42,7 +42,8 @@
 
     <!-- Top Navigation Menu -->
     <div class="topnav">
-        <a href="#home"><img src="../img/logo/KB Creative.png" alt="Logo KB Creative" class="logo-header" id="logo"></a>
+        <a href="#home" class="logo-link"><img src="../img/logo/KB Creative.png" alt="Logo KB Creative"
+                class="logo-header" id="logo"></a>
         <div id="myLinks">
             <a href="#service" onclick="closeDropdown()">Service</a>
             <a href="#about" onclick="closeDropdown()">About</a>
