--- a/pages/index.html
+++ b/pages/index.html
@@ -135,7 +135,7 @@
 
     <section id="projects">
         <div class="container" data-aos="fade-right" data-aos-duration="700">
-            <h1 class="heading">Projects <span class="header-dot">.</span>
+            <h1 class="heading">Latest projects <span class="header-dot">.</span>
             </h1>
             <div class="row" id="projects-row-1">
 
