--- a/pages/index.html
+++ b/pages/index.html
@@ -9,6 +9,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Fontawesome import -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <!-- RECAPTCHA -->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <!-- SEO/SERP -->
     <title>KB Creative | Webdesign and Development</title>
     <meta name="description" content="Agency in Amsterdam that creates and designs full-stack web applications. With a broad skill set ranging from
@@ -207,7 +209,9 @@
 
                         <label for="message">Message <span class="required-form">*</span></label>
                         <textarea rows="5" placeholder="Type your message here..." id="message" name="entry.839337160"
-                            required maxlength="500"></textarea>
+                            required maxlength="500"></textarea><br>
+
+                        <div class="g-recaptcha" data-sitekey="6LcfmEEcAAAAADNWYBhVsvacrwbZMJCjJZLfx2WN"></div><br>
 
                         <input type="submit" value="Submit">
 
